# Noted

./: .gitignore  README.md  all.sh  backend.sh  frontend.sh  start.sh  stop.sh
backend/: pyproject.toml  requirements.txt
backend/chat/: consumers.py  middleware.py
backend/core/: asgi.py  auth.py  middleware.py  routing.py  schemas.py  settings.py  urls.py
backend/groups/: admin.py  api.py  consumers.py  models.py  routing.py  schemas.py  views.py
backend/groups/migrations/: 0001_initial.py  0002_group_public.py
backend/groups/templates/: chat_test.html
backend/images/: admin.py  api.py  models.py
backend/images/migrations/: 0001_initial.py  0002_initial.py
backend/static/admin/css/: custom_admin.css
backend/templates/admin/: base_site.html
backend/users/: admin.py  api.py  models.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_user_email.py
noted_app/: README.md  pubspec.yaml
noted_app/android/app/: build.gradle
noted_app/android/app/src/main/: AndroidManifest.xml
noted_app/android/app/src/main/kotlin/com/noted/noted_app/: MainActivity.kt
noted_app/ios/Runner/: Info.plist
noted_app/ios/Runner.xcodeproj/: project.pbxproj
noted_app/linux/: CMakeLists.txt
noted_app/linux/runner/: my_application.cc
noted_app/macos/Runner.xcodeproj/: project.pbxproj
noted_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
noted_app/macos/Runner/Configs/: AppInfo.xcconfig
noted_app/test/: widget_test.dart
noted_app/web/: index.html  manifest.json
noted_app/windows/: CMakeLists.txt
noted_app/windows/runner/: Runner.rc  main.cpp
