[tool.poetry]
name = "noted"
version = "0.1.0"
description = "A Django Ninja API backend with authentication, profiles and images"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.7"
django-ninja = "^1.0.1"
django-cors-headers = "^4.3.0"
Pillow = "^10.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
